Bug 164795 - NVDA does not announce first line indentation in LibreOffice Writer
Summary: NVDA does not announce first line indentation in LibreOffice Writer
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.3.0.3 release
Hardware: All All
: medium normal
Assignee: Michael Weghorn
URL:
Whiteboard: target:25.8.0 inReleaseNotes:25.8
Keywords: accessibility
Depends on:
Blocks: a11y-Windows
  Show dependency treegraph
 
Reported: 2025-01-22 08:37 UTC by Michael Weghorn
Modified: 2025-12-31 13:31 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Sample doc containing a para that has first line indented (11.01 KB, application/vnd.oasis.opendocument.text)
2025-01-22 08:39 UTC, Michael Weghorn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Weghorn 2025-01-22 08:37:29 UTC
Originally reported https://github.com/nvaccess/nvda/issues/13052 but this requires work on both, LO and NVDA side.

Quoting from the NVDA issue:

> ### Steps to reproduce:
> 
> open the free office writer. type a paragraph with 2 lines apply the effects
> 
> first line indent (change the default, I put 1.30) Now read the applied formatting
> ### Actual behavior:
> 
> nvda does not report the indentation of the first line
> ### Expected behavior:
> 
> nvda should report the indentation of the first line
> ### System configuration
> #### NVDA installed/portable/running from source:
> 
> instaled
> #### NVDA version:
> 
> NVDA version alpha-24184,fd9ae8c4
> #### Windows version:
> 
> 11 22000.318
> #### Name and version of other software in use when reproducing the issue:
> 
> LibreOffice version 7.3.0.0
> #### Other information about your system:
> ### Other questions
> #### Does the issue still occur after restarting your computer?
> 
> yes
> #### Have you tried any other versions of NVDA? If so, please report their behaviors.
> 
> no
> #### If NVDA add-ons are disabled, is your problem still occurring?
> 
> yes
> #### Does the issue still occur after you run the COM Registration Fixing Tool in NVDA's tools menu?
> 
> yes
Comment 1 Michael Weghorn 2025-01-22 08:39:05 UTC
Quoting https://github.com/nvaccess/nvda/issues/13052#issuecomment-2507404956 :

> I can confirm that. Looking at the [IAccessible2 object specification](https://github.com/LinuxA11y/IAccessible2/blob/master/spec/objectattributes.md) (and the referenced CSS spec), implementing support for the "text-indent" object property in both, LibreOffice and NVDA might be a way to make it work.

This is what I'm looking into now.
Comment 2 Michael Weghorn 2025-01-22 08:39:56 UTC
Created attachment 198672 [details]
Sample doc containing a para that has first line indented
Comment 3 Commit Notification 2025-01-22 11:12:50 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a2d3c9341f177b720d7a52e70759721d3221037f

tdf#164795 a11y: Report first line indent via IAccessible2

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Michael Weghorn 2025-01-22 11:21:05 UTC
LO side is implemented.

Pending PR to implement the NVDA side:
https://github.com/nvaccess/nvda/pull/17638
Comment 5 Ellenhelen 2025-10-23 06:35:05 UTC Comment hidden (spam)
Comment 6 KaneCharles 2025-11-03 08:21:51 UTC Comment hidden (spam)
Comment 7 alicebelinda 2025-11-04 09:22:18 UTC Comment hidden (spam)
Comment 8 KyleBrowning 2025-12-31 08:53:58 UTC Comment hidden (spam)