tdf#164795 a11y: Report first line indent via IAccessible2

Translate the UNO "ParaFirstLineIndent" attribute
to the corresponding IAccessible "text-indent" object
attribute that is mentioned in the IAccessible2 object
attributes spec [1] which references the CSS spec [2]
that says:

> This property specifies the indentation of the first line
> of text in a block container.

Use a value in millimetres as the IAccessible2 object attr
spec [1] says:

> This value should be specified in mm, e.g. 4mm.

With this in place, querying object attributes of
the Writer paragraph that has a first line indent of 1 cm
in attachment 198672 from tdf#164795 now gives this
in NVDA's Python console:

    >>> focus.IAccessibleObject.attributes
    'text-align:left;text-indent:10mm;'

(Reporting of "text-align:left;" was already implemented
before, "text-indent:10mm;" is newly implemented by
this commit.)

In order for NVDA to actually speak the first line indent
when requesting announcement for text attributes (via NVDA+F),
handling of the "text-indent" attribute will have to be
implemented in NVDA as well.

[1] https://github.com/LinuxA11y/IAccessible2/blob/master/spec/objectattributes.md
[2] https://www.w3.org/TR/CSS2/text.html#propdef-text-indent

Change-Id: Id6db1ec832a21f63b6e2d7e99386ddc2453ed24f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/180574
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>